deployment-k8s/hello-nginx/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/issuer: letsencrypt-prod
    certmanager.k8s.io/acme-challenge-type: http01

spec:
  tls:
    - hosts:
        - hello.hexchain.xyz
      secretName: k8s-stack-hello-nginx-app-tls
  rules:
    - host: hello.hexchain.xyz
      http:
        paths:
          - path: /
            backend:
              serviceName: my-service
              servicePort: 80
